syntax = "proto3";

package auth.local.v1;

import "common/provider/v1/provider.proto";
import "third_party/validate/validate.proto";

option go_package = "mandacode.com/accounts/auth/proto/auth/oauth/v1;oauthauthv1";

service OAuthAuthService {
  // Login a user with OAuth provider
  rpc Login(OAuthLoginRequest) returns (OAuthLoginResponse);
}

//
// Login messages
//
message OAuthLoginRequest {
  common.provider.v1.OAuthProvider provider = 1; // OAuth provider enum
  string access_token = 2 [
    (validate.rules).string = {min_len : 1}
  ]; // Access token from the OAuth provider
}

message OAuthLoginResponse {
  string user_id = 1 [
    (validate.rules).string = {uuid : true}
  ]; // User ID associated with the OAuth account
  string access_token = 2 [
    (validate.rules).string = {min_len : 1}
  ]; // Generated access token for the user
  string refresh_token = 3 [
    (validate.rules).string = {min_len : 1}
  ]; // Generated refresh token for the user
}
