syntax = "proto3";

package auth.token.v1;

import "third_party/validate/validate.proto";

// option go_package = "mandacode.com/accounts/proto/auth/login/local/v1;localloginv1";
option go_package = "mandacode.com/accounts/proto/auth/token/v1;tokenv1";

service TokenService {
  // Verify a user's access token
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);

  // Refresh a user's access token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

//
// Verify Token messages
//
message VerifyTokenRequest {
  string access_token = 1 [ (validate.rules).string = {min_len : 1} ];
}
message VerifyTokenResponse {
  bool valid = 1;
  string user_id = 2 [ (validate.rules).string = {uuid : true} ];
}

//
// Refresh Token messages
//
message RefreshTokenRequest {
  string refresh_token = 1 [ (validate.rules).string = {min_len : 1} ];
}
message RefreshTokenResponse {
  string access_token = 1 [ (validate.rules).string = {min_len : 1} ];
  string refresh_token = 2 [ (validate.rules).string = {min_len : 1} ];
}
